# sodium

./: .gitignore  BUGS.md  CMakeLists.txt  FEATURES.md  README.md  TODO-RESEARCH.md  TODO.md  install-vscode-ext.sh  install.sh  out  out.asm  out.lst  run_tests.sh  test.cyan  test_arith.cyan  test_arrays.cyan  test_bitwise2.cyan  test_chain.cyan  test_cmp.cyan  test_compound_assign.cyan  test_for.cyan  test_func_multi.cyan  test_inc_dec_loop2.cyan  test_logical.cyan  test_lte_gte.cyan  test_mod_assign.cyan  test_mod_loop.cyan  test_scoping.cyan  test_standalone_block.cyan
demo/: README.md
demo/outputs/: 02_ast.txt  03_ir.txt  04_x86_assembly.asm  05_riscv_assembly.asm  06_compare_key_sections.md
demo/source/: demo.cyan
examples/: fibonacci.cyan  fizzbuzz.cyan  sieve.cyan
scripts/: install-vscode-ext.sh  install.sh  run_tests.sh
sodium-rt/: Makefile  allocator.c
sodium-rt/riscv64/: Makefile  crt0.asm  exit.asm  malloc.asm  print.asm  read.asm
sodium-rt/x86_64/: crt0.asm  exit.asm  malloc.asm  print.asm  read.asm
src/: arena.cpp  arena.hpp  ast_printer.cpp  ast_printer.hpp  generation.cpp  generation.hpp  json.hpp  lsp.cpp  lsp.hpp  lsp_main.cpp  main.cpp  parser.cpp  parser.hpp  preprocessor.cpp  preprocessor.hpp  tokenization.cpp  tokenization.hpp
src/backend/: interface.hpp  null_backend.hpp
src/ir/: block.hpp  builder.hpp  dump.cpp  dump.hpp  emitter.hpp  function.hpp  instruction.hpp  linear_scan.hpp  liveness.hpp  module.hpp  opcodes.hpp  rewriter.hpp  target_regs.hpp  value.hpp
tests/: test.cyan  test_arr_lit.cyan  test_arr_scalar_assign.cyan  test_bitwise_assign.cyan  test_complex.cyan  test_comprehensive.cyan  test_continue.cyan  test_do_while_continue.cyan  test_else_if.cyan  test_for_compound_update.cyan  test_func_basic.cyan  test_inc_dec_loop.cyan  test_mod.cyan  test_nested_if.cyan  test_nested_if_while.cyan  test_nested_loops.cyan  test_paren.cyan  test_print.cyan  test_read.cyan  test_strings.cyan  test_types.cyan  test_types_compound.cyan  test_while.cyan
tests/include/: helper.cyan  test_include_basic.cyan  test_pragma_once.cyan
tests/include_test/: test_include_missing.cyan
tests/integration/: test_func_stress.cyan  test_gcd.cyan  test_sieve.cyan
tests/unit/: test_allocator_stress.cyan  test_argc.cyan  test_argv_basic.cyan  test_arith2.cyan  test_bad_const_assign.cyan  test_bad_hex.cyan  test_bad_ops.cyan  test_bitwise.cyan  test_bitwise_not.cyan  test_break.cyan  test_break_for.cyan  test_compound_assign2.cyan  test_const_arr.cyan  test_continue_for.cyan  test_deref_compound.cyan  test_div_mod.cyan  test_do_while.cyan  test_do_while_break.cyan  test_else_if2.cyan  test_else_if3.cyan  test_else_if4.cyan  test_empty_blocks.cyan  test_for_global_update.cyan  test_forward_func.cyan  test_func_rec.cyan  test_global.cyan  test_global_complex.cyan  test_global_func.cyan  test_hex.cyan  test_if.cyan  test_inc_dec.cyan  test_inc_dec_edge.cyan  test_large_free.cyan  test_malloc.cyan  test_many_args.cyan  test_nested_break.cyan  (+31 more)
vscode-extension/: extension.js  package.json
(+6 files in other folders)
